[build-system]
requires = ["maturin>=1.0.1", "wheel"]
build-backend = "maturin"

[project]
name = "allophant"
description = "A multilingual phoneme recognizer capable of generalizing zero-shot to unseen phoneme inventories."
authors = [
  { name = "Kevin Glocker", email = "kevin.glocker@liu.se" },
  { name = "Aaricia Herygers", email = "aariciaherygers@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "tensorboard>=2.11.0",
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "marshmallow==3.18.0",
    "marshmallow-enum==1.5.1",
    "marshmallow-oneofschema==3.0.1",
    "toml==0.10.2",
    "numpy==1.26.4",
    "transformers==4.41.2",
    "stanza==1.4.2",
    "epitran==1.23",
    "phonemizer==3.2.1",
    "langcodes[data]==3.3.0",
    "marshmallow_dataclass[enum,union]==8.7.1",
    "pandas==1.5.3",
    "requests==2.28.1",
    "tqdm==4.64.1",
    "panphon==0.20.0",
    "msgpack==1.0.4",
    "mutagen==1.45.1",
    "zarr==2.13.3",
    "mashumaro[msgpack]==3.7",
    "regex==2022.10.31",
    "flashlight-text==0.0.7",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[project.urls]
source = "https://github.com/kgnlp/allophant"

[project.scripts]
allophant = "allophant.run:main"
allophant-data = "allophant.datasets.__main__:main"
allophant-features = "allophant.phonetic_features:main"
allophant-error-rates = "allophant.get_attribute_error_rates:main"

[tool.maturin]
module-name = "allophant.phonemes"
bindings = "pyo3"
debug = false
exclude = ["/interspeech_results/*", "/.gitignore"]

[tool.black]
line-length = 120
include = "\\.pyi?$"
target_version = ["py310", "py312"]
